--- a/ADM-HW5 - Preliminaries and RQ1+RQ2+RQ5+RQ6.ipynb
+++ b/ADM-HW5 - Preliminaries and RQ1+RQ2+RQ5+RQ6.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -87,7 +87,7 @@
        "4     134   541222"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -206,7 +206,7 @@
        "[1791489 rows x 1 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -350,7 +350,7 @@
        "[17364 rows x 2 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -388,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -411,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -422,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -439,7 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -470,28 +470,28 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>Aston_Villa_F.C._players</td>\n",
-       "      <td>[76871, 81759, 77090, 84307, 80820, 78226, 792...</td>\n",
+       "      <td>Southampton_F.C._players</td>\n",
+       "      <td>[76871, 77063, 672774, 89545, 80007, 77676, 80...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>Bury_F.C._players</td>\n",
-       "      <td>[79069, 1295686, 81608, 87320, 79929, 79249, 8...</td>\n",
+       "      <td>Swindon_Town_F.C._players</td>\n",
+       "      <td>[79069, 75682, 74585, 80932, 78098, 85213, 838...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>Living_people</td>\n",
-       "      <td>[79139, 79143, 35373, 509383, 679524, 1053010,...</td>\n",
+       "      <td>Port_Vale_F.C._players</td>\n",
+       "      <td>[79139, 77427, 74843, 104002, 78018, 77794, 79...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>Association_football_defenders</td>\n",
-       "      <td>[80237, 1295678, 1001825, 1004513, 736157, 749...</td>\n",
+       "      <td>Living_people</td>\n",
+       "      <td>[79143, 1053010, 400381, 610933, 1039467, 1061...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>People_from_Worcester</td>\n",
-       "      <td>[84108]</td>\n",
+       "      <td>The_Football_League_players</td>\n",
+       "      <td>[80237, 84354, 84396, 1273454, 88972, 89362, 7...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -499,66 +499,66 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5205</th>\n",
-       "      <td>Irish_rugby_union_players</td>\n",
-       "      <td>[1525229]</td>\n",
+       "      <th>5250</th>\n",
+       "      <td>American_people_who_died_in_prison_custody</td>\n",
+       "      <td>[1508602]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5206</th>\n",
-       "      <td>Communist_Party_of_Great_Britain_members</td>\n",
-       "      <td>[1636231]</td>\n",
+       "      <th>5251</th>\n",
+       "      <td>20th-century_executions</td>\n",
+       "      <td>[1509899]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5207</th>\n",
-       "      <td>Nahuatl_words_and_phrases</td>\n",
-       "      <td>[1678297]</td>\n",
+       "      <th>5252</th>\n",
+       "      <td>Executed_American_people</td>\n",
+       "      <td>[1510043, 1510088]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5208</th>\n",
-       "      <td>People_of_the_Chechen_wars</td>\n",
-       "      <td>[1706098]</td>\n",
+       "      <th>5253</th>\n",
+       "      <td>20th-century_Anglican_bishops</td>\n",
+       "      <td>[1780989]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5209</th>\n",
+       "      <th>5254</th>\n",
        "      <td>Sri_Lankan_Hindus</td>\n",
        "      <td>[1787565, 1787570]</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5210 rows × 2 columns</p>\n",
+       "<p>5255 rows × 2 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                      category  \\\n",
-       "0                     Aston_Villa_F.C._players   \n",
-       "1                            Bury_F.C._players   \n",
-       "2                                Living_people   \n",
-       "3               Association_football_defenders   \n",
-       "4                        People_from_Worcester   \n",
-       "...                                        ...   \n",
-       "5205                 Irish_rugby_union_players   \n",
-       "5206  Communist_Party_of_Great_Britain_members   \n",
-       "5207                 Nahuatl_words_and_phrases   \n",
-       "5208                People_of_the_Chechen_wars   \n",
-       "5209                         Sri_Lankan_Hindus   \n",
+       "                                        category  \\\n",
+       "0                       Southampton_F.C._players   \n",
+       "1                      Swindon_Town_F.C._players   \n",
+       "2                         Port_Vale_F.C._players   \n",
+       "3                                  Living_people   \n",
+       "4                    The_Football_League_players   \n",
+       "...                                          ...   \n",
+       "5250  American_people_who_died_in_prison_custody   \n",
+       "5251                     20th-century_executions   \n",
+       "5252                    Executed_American_people   \n",
+       "5253               20th-century_Anglican_bishops   \n",
+       "5254                           Sri_Lankan_Hindus   \n",
        "\n",
        "                                             pages list  \n",
-       "0     [76871, 81759, 77090, 84307, 80820, 78226, 792...  \n",
-       "1     [79069, 1295686, 81608, 87320, 79929, 79249, 8...  \n",
-       "2     [79139, 79143, 35373, 509383, 679524, 1053010,...  \n",
-       "3     [80237, 1295678, 1001825, 1004513, 736157, 749...  \n",
-       "4                                               [84108]  \n",
+       "0     [76871, 77063, 672774, 89545, 80007, 77676, 80...  \n",
+       "1     [79069, 75682, 74585, 80932, 78098, 85213, 838...  \n",
+       "2     [79139, 77427, 74843, 104002, 78018, 77794, 79...  \n",
+       "3     [79143, 1053010, 400381, 610933, 1039467, 1061...  \n",
+       "4     [80237, 84354, 84396, 1273454, 88972, 89362, 7...  \n",
        "...                                                 ...  \n",
-       "5205                                          [1525229]  \n",
-       "5206                                          [1636231]  \n",
-       "5207                                          [1678297]  \n",
-       "5208                                          [1706098]  \n",
-       "5209                                 [1787565, 1787570]  \n",
+       "5250                                          [1508602]  \n",
+       "5251                                          [1509899]  \n",
+       "5252                                 [1510043, 1510088]  \n",
+       "5253                                          [1780989]  \n",
+       "5254                                 [1787565, 1787570]  \n",
        "\n",
-       "[5210 rows x 2 columns]"
+       "[5255 rows x 2 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -591,7 +591,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -607,7 +607,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -620,7 +620,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -632,7 +632,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -648,7 +648,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
@@ -657,7 +657,7 @@
        "'Name: \\nType: DiGraph\\nNumber of nodes: 98343\\nNumber of edges: 483094\\nAverage in degree:   4.9123\\nAverage out degree:   4.9123'"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 77,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -668,7 +668,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
@@ -685,7 +685,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
@@ -716,7 +716,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
@@ -742,7 +742,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
@@ -751,7 +751,7 @@
        "9.824674862471147"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 81,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -770,7 +770,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
@@ -796,7 +796,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -810,7 +810,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
@@ -1254,24 +1254,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [],
    "source": [
     "from tqdm import tqdm\n",
     "import numpy as np\n",
     "\n",
-    "def PageRank(G, d = 0.85):\n",
+    "def PageRank(G, d = 0.85, max_iter = 100):\n",
     "    probs_node = { x: 1 / len(G) for x in G.nodes }                                                                                             # create dict of uniform probs for each page\n",
     "    out_degrees = { x: G.out_degree(x) if G.out_degree(x) != 0 else len(G) for x in G.nodes }                                                   # create dict of uniform out_degrees for each page and for a page with noone outlinks our choice is uniformly at all pages present, so consider the length of the graph \n",
     "    \n",
     "    new_probs_node = probs_node.copy()                                                                                                          # save each new iteration considering always the old probabilities\n",
-    "    \n",
-    "    max_iter = int(np.log(len(G)))                                                                                                              # the optimal way to choose the correct number of iterations\n",
+    "                                                                                                                  # the optimal way to choose the correct number of iterations\n",
     "    for _ in tqdm(range(max_iter)):                                                                                                             # the algorithm iterate to achieve the best predictive socre  \n",
     "        for p_x in new_probs_node:                                                                                                              # catch each page in order to update the probabilities                            \n",
-    "            ratios_sum = sum([ probs_node[neigh] / out_degrees[neigh] for neigh in nx.neighbors(x_category, p_x) if out_degrees[neigh] > 0 ])   # increase the rank, check if the neighbors has outgoing links, if it not go forward to the next neighbor\n",
-    "            new_probs_node[p_x] = ( ( 1 - d ) / len(G) ) + d * ratios_sum                                                                    # then update the value for the i-th node\n",
+    "            ratios_sum = sum([ probs_node[neigh] / out_degrees[neigh] for neigh in nx.neighbors(G, p_x) if out_degrees[neigh] > 0 ])   # increase the rank, check if the neighbors has outgoing links, if it not go forward to the next neighbor\n",
+    "            new_probs_node[p_x] = ( ( 1 - d ) / len(G) ) + ( d * ratios_sum )                                                                   # then update the value for the i-th node\n",
     "        \n",
     "            probs_node = new_probs_node.copy()\n",
     "    \n",
@@ -1280,54 +1279,115 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# useful create a dict\n",
+    "lst_category = list(new_categories[\"category\"])\n",
+    "lst_pages = [ set(map(int, lst_pg )) for lst_pg in list(new_categories[\"pages list\"]) ]\n",
+    "my_dict = { cat: lst_pages[i] for i, cat in enumerate(lst_category) }"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# create the new graph of categories and inserts the node as one category\n",
+    "new_G = nx.DiGraph(directed=True)\n",
+    "for cat in lst_category:\n",
+    "    new_G.add_node(cat)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|███████████████████████████████████████████████████████████████████████████████████| 3/3 [00:00<00:00, 743.67it/s]\n"
+      "100%|█████████████████████████████████████████████████████████████████████████████| 5278/5278 [00:12<00:00, 432.79it/s]\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "0.1501106770833333"
-      ]
-     },
-     "execution_count": 171,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "lst_category = list(new_categories[\"category\"])\n",
-    "lst_pages = list(map(int, list(new_categories[\"pages list\"])[0]))\n",
-    "x_category = G.subgraph(lst_pages)\n",
-    "\n",
-    "PR = PageRank(x_category)\n",
-    "sum(PR.values())"
+    "# add edges\n",
+    "for x in tqdm(my_dict):\n",
+    "    for y in my_dict:\n",
+    "        if (x != y and len(my_dict[x].intersection(my_dict[y])) > 0):\n",
+    "            new_G.add_edge(x, y)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1.0000000000000004"
+       "OutEdgeView([])"
       ]
      },
-     "execution_count": 167,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "sum(nx.pagerank(x_category, alpha = 0.85).values())"
+    "new_G.edges"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|████████████████████████████████████████████████████████████████████████████████| 100/100 [00:19<00:00,  5.23it/s]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0.1499999999999978"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tot_PageRank = PageRank(new_G)\n",
+    "sum(tot_PageRank.values())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.9999999999999764"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sum(nx.pagerank(new_G, alpha = 0.85).values())"
    ]
   },
   {
@@ -1343,18 +1403,6 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.8.3"
   }
  },
  "nbformat": 4,
