--- a/ADM-HW5 - Preliminaries and RQ1+RQ2+RQ5+RQ6.ipynb
+++ b/ADM-HW5 - Preliminaries and RQ1+RQ2+RQ5+RQ6.ipynb
@@ -2,13 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "from collections import defaultdict\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "import random"
    ]
   },
   {
@@ -20,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -87,7 +88,7 @@
        "4     134   541222"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -107,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -206,7 +207,7 @@
        "[1791489 rows x 1 columns]"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -231,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -350,7 +351,7 @@
        "[17364 rows x 2 columns]"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -371,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -388,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -411,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -422,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -439,7 +440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -470,28 +471,28 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>Southampton_F.C._players</td>\n",
-       "      <td>[76871, 77063, 672774, 89545, 80007, 77676, 80...</td>\n",
+       "      <td>English_football_managers</td>\n",
+       "      <td>[76871, 83800, 74522, 82756, 79336, 79339, 100...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>Swindon_Town_F.C._players</td>\n",
-       "      <td>[79069, 75682, 74585, 80932, 78098, 85213, 838...</td>\n",
+       "      <td>Huddersfield_Town_F.C._players</td>\n",
+       "      <td>[79069, 84396, 80931, 80936, 82342, 78097, 810...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>Port_Vale_F.C._players</td>\n",
-       "      <td>[79139, 77427, 74843, 104002, 78018, 77794, 79...</td>\n",
+       "      <td>Association_football_midfielders</td>\n",
+       "      <td>[79139, 79143, 27310, 395439, 737956, 1642719,...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>Living_people</td>\n",
-       "      <td>[79143, 1053010, 400381, 610933, 1039467, 1061...</td>\n",
+       "      <td>England_youth_international_footballers</td>\n",
+       "      <td>[80237, 83360, 77842, 82793, 82908, 79812, 831...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>The_Football_League_players</td>\n",
-       "      <td>[80237, 84354, 84396, 1273454, 88972, 89362, 7...</td>\n",
+       "      <td>People_from_Worcester</td>\n",
+       "      <td>[84108, 89734, 538870, 540020]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -500,28 +501,28 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5250</th>\n",
-       "      <td>American_people_who_died_in_prison_custody</td>\n",
-       "      <td>[1508602]</td>\n",
+       "      <td>Ireland_international_rugby_union_players</td>\n",
+       "      <td>[1525229]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5251</th>\n",
-       "      <td>20th-century_executions</td>\n",
-       "      <td>[1509899]</td>\n",
+       "      <td>Ohio_Democrats</td>\n",
+       "      <td>[1663367]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5252</th>\n",
-       "      <td>Executed_American_people</td>\n",
-       "      <td>[1510043, 1510088]</td>\n",
+       "      <td>People_of_the_Chechen_wars</td>\n",
+       "      <td>[1706096]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5253</th>\n",
-       "      <td>20th-century_Anglican_bishops</td>\n",
-       "      <td>[1780989]</td>\n",
+       "      <td>Archbishops_of_York</td>\n",
+       "      <td>[1779987]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5254</th>\n",
-       "      <td>Sri_Lankan_Hindus</td>\n",
-       "      <td>[1787565, 1787570]</td>\n",
+       "      <td>20th-century_Anglican_bishops</td>\n",
+       "      <td>[1780989]</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -529,36 +530,36 @@
        "</div>"
       ],
       "text/plain": [
-       "                                        category  \\\n",
-       "0                       Southampton_F.C._players   \n",
-       "1                      Swindon_Town_F.C._players   \n",
-       "2                         Port_Vale_F.C._players   \n",
-       "3                                  Living_people   \n",
-       "4                    The_Football_League_players   \n",
-       "...                                          ...   \n",
-       "5250  American_people_who_died_in_prison_custody   \n",
-       "5251                     20th-century_executions   \n",
-       "5252                    Executed_American_people   \n",
-       "5253               20th-century_Anglican_bishops   \n",
-       "5254                           Sri_Lankan_Hindus   \n",
+       "                                       category  \\\n",
+       "0                     English_football_managers   \n",
+       "1                Huddersfield_Town_F.C._players   \n",
+       "2              Association_football_midfielders   \n",
+       "3       England_youth_international_footballers   \n",
+       "4                         People_from_Worcester   \n",
+       "...                                         ...   \n",
+       "5250  Ireland_international_rugby_union_players   \n",
+       "5251                             Ohio_Democrats   \n",
+       "5252                 People_of_the_Chechen_wars   \n",
+       "5253                        Archbishops_of_York   \n",
+       "5254              20th-century_Anglican_bishops   \n",
        "\n",
        "                                             pages list  \n",
-       "0     [76871, 77063, 672774, 89545, 80007, 77676, 80...  \n",
-       "1     [79069, 75682, 74585, 80932, 78098, 85213, 838...  \n",
-       "2     [79139, 77427, 74843, 104002, 78018, 77794, 79...  \n",
-       "3     [79143, 1053010, 400381, 610933, 1039467, 1061...  \n",
-       "4     [80237, 84354, 84396, 1273454, 88972, 89362, 7...  \n",
+       "0     [76871, 83800, 74522, 82756, 79336, 79339, 100...  \n",
+       "1     [79069, 84396, 80931, 80936, 82342, 78097, 810...  \n",
+       "2     [79139, 79143, 27310, 395439, 737956, 1642719,...  \n",
+       "3     [80237, 83360, 77842, 82793, 82908, 79812, 831...  \n",
+       "4                        [84108, 89734, 538870, 540020]  \n",
        "...                                                 ...  \n",
-       "5250                                          [1508602]  \n",
-       "5251                                          [1509899]  \n",
-       "5252                                 [1510043, 1510088]  \n",
-       "5253                                          [1780989]  \n",
-       "5254                                 [1787565, 1787570]  \n",
+       "5250                                          [1525229]  \n",
+       "5251                                          [1663367]  \n",
+       "5252                                          [1706096]  \n",
+       "5253                                          [1779987]  \n",
+       "5254                                          [1780989]  \n",
        "\n",
        "[5255 rows x 2 columns]"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -591,7 +592,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -607,7 +608,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -620,7 +621,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -632,7 +633,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -648,7 +649,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -657,7 +658,7 @@
        "'Name: \\nType: DiGraph\\nNumber of nodes: 98343\\nNumber of edges: 483094\\nAverage in degree:   4.9123\\nAverage out degree:   4.9123'"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -668,7 +669,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -685,7 +686,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -716,7 +717,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -742,7 +743,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -751,7 +752,7 @@
        "9.824674862471147"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -770,7 +771,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -980,6 +981,140 @@
     "indices = [i for i, x in enumerate(dist) if x == d]\n",
     "nodes = [pages_names.loc[str(x), \"name\"] for i, x in enumerate(nodes) if i in indices]\n",
     "print(f\"the set of all pages that you can achieve with {d} are {nodes}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# RQ3"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "returns the minimum number of clicks required to reach all pages in p, starting from the page v, corresponding to the most central article, according to the in-degree centrality, in C.\n",
+    "\n",
+    "According to the professors request, I prefer using the betweeness centrality in order to have the most centered node in the graph."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ctg = list(new_categories[\"category\"])\n",
+    "pg_lst = list(new_categories[\"pages list\"])\n",
+    "\n",
+    "union_lst = [ [x, list(map(int,pg_lst[i]))] for i, x in enumerate(ctg) ]\n",
+    "\n",
+    "my_dict = {x[0]: x[1] for x in union_lst}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Choose randomly the category in order to find the minimum number of clicks to achieve all nodes in one category."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'UK_MPs_18411847'"
+      ]
+     },
+     "execution_count": 80,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cat = random.sample(my_dict.keys(), 1)[0]\n",
+    "cat"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Consider the subgraph of G interesting to the selected category chose."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 121,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "the number of pages are 60 and the number of edges are 14\n"
+     ]
+    }
+   ],
+   "source": [
+    "new_cat = G.subgraph(my_dict[cat])\n",
+    "print(f\"the number of pages are {len(new_cat)} and the number of edges are {len(new_cat.edges)}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Considering the node most centered in the graph is.. with the betweenness centrality."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "the most centered node is 537717\n"
+     ]
+    }
+   ],
+   "source": [
+    "between_node = nx.betweenness_centrality(new_cat)\n",
+    "between_node = dict(sorted(between_node.items(), key=lambda item: item[1], reverse=True))\n",
+    "\n",
+    "v = list(between_node.keys())[0]\n",
+    "print(f\"the most centered node is {v}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Implement the DFS from one node to all that we can achieve."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def DFS(G, v, visited):\n",
+    "    if v not in visited:\n",
+    "        visited.append(v)\n",
+    "        for neigh in nx.neighbors(G, v):\n",
+    "            DFS(G, neigh, visited)\n",
+    "\n",
+    "visited = []\n",
+    "DFS(new_cat, v, visited)"
    ]
   },
   {
@@ -1254,7 +1389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1266,10 +1401,10 @@
     "    out_degrees = { x: G.out_degree(x) if G.out_degree(x) != 0 else len(G) for x in G.nodes }                                                   # create dict of uniform out_degrees for each page and for a page with noone outlinks our choice is uniformly at all pages present, so consider the length of the graph \n",
     "    \n",
     "    new_probs_node = probs_node.copy()                                                                                                          # save each new iteration considering always the old probabilities\n",
-    "                                                                                                                  # the optimal way to choose the correct number of iterations\n",
+    "                                                                                                                                                # the optimal way to choose the correct number of iterations\n",
     "    for _ in tqdm(range(max_iter)):                                                                                                             # the algorithm iterate to achieve the best predictive socre  \n",
     "        for p_x in new_probs_node:                                                                                                              # catch each page in order to update the probabilities                            \n",
-    "            ratios_sum = sum([ probs_node[neigh] / out_degrees[neigh] for neigh in nx.neighbors(G, p_x) if out_degrees[neigh] > 0 ])   # increase the rank, check if the neighbors has outgoing links, if it not go forward to the next neighbor\n",
+    "            ratios_sum = sum([ probs_node[neigh] / out_degrees[neigh] for neigh in nx.neighbors(G, p_x) ])  .                                   # increase the rank, check if the neighbors has outgoing links, if it not go forward to the next neighbor\n",
     "            new_probs_node[p_x] = ( ( 1 - d ) / len(G) ) + ( d * ratios_sum )                                                                   # then update the value for the i-th node\n",
     "        \n",
     "            probs_node = new_probs_node.copy()\n",
@@ -1279,7 +1414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1291,7 +1426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1303,14 +1438,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|█████████████████████████████████████████████████████████████████████████████| 5278/5278 [00:12<00:00, 432.79it/s]\n"
+      "100%|█████████████████████████████████████████████████████████████████████████████| 5255/5255 [00:13<00:00, 381.31it/s]\n"
      ]
     }
    ],
@@ -1324,7 +1459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -1333,7 +1468,7 @@
        "OutEdgeView([])"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1344,23 +1479,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|████████████████████████████████████████████████████████████████████████████████| 100/100 [00:19<00:00,  5.23it/s]\n"
+      "100%|████████████████████████████████████████████████████████████████████████████████| 100/100 [00:26<00:00,  3.84it/s]\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "0.1499999999999978"
+       "0.1499999999999799"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1372,16 +1507,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.9999999999999764"
+       "0.9999999999998745"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1389,13 +1524,6 @@
    "source": [
     "sum(nx.pagerank(new_G, alpha = 0.85).values())"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -1403,6 +1531,18 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
