--- a/ADM-HW5.ipynb
+++ b/ADM-HW5.ipynb
@@ -1704,7 +1704,7 @@
     }
    },
    "source": [
-    "Interpreting the nodes in old network to its category's name, then construct a category network"
+    "Interpreting the nodes in old network to its category's name, then construct a category network."
    ]
   },
   {
@@ -1898,7 +1898,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Bulid the ncategory network."
+    "Bulid the new category network."
    ]
   },
   {
@@ -2029,7 +2029,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Construct a dataframe for exch category and its pagerank value."
+    "Construct a dataframe for each category and its pagerank value."
    ]
   },
   {
