--- a/ADM-HW5.ipynb
+++ b/ADM-HW5.ipynb
@@ -21,12 +21,9 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import numpy as np\n",
-    "from collections import defaultdict\n",
     "import matplotlib.pyplot as plt\n",
-    "import random\n",
-    "from tqdm import tqdm\n",
     "import networkx as nx\n",
+    "from tkinter import _flatten\n",
     "\n",
     "import functions as fun"
    ]
@@ -46,9 +43,9 @@
     "\n",
     "So, we load the file  \"wikigraph_reduced.csv\" where we create the main network with all links between pages. This file contains the pages whose belong to the categories that contain a number of articles between 5000 and 30000. \n",
     "\n",
-    "Then, we uploaded also the \"wiki-topcats-page-names.txt\" in order to save the name of all pages and \"wiki-topcats-categories.txt\" where we should control if the main rule is respected. \n",
+    "After, we uploaded also the \"wiki-topcats-page-names.txt\" in order to save the name of all pages and \"wiki-topcats-categories.txt\" where we should control if the main rule (the range of all pages in each category) is respected. \n",
     "\n",
-    "Despite, the professors said that the categories contained the right number of pages for each category, we try to prove this step and we saw that the dataset didn't contain the right number of pages per category, so we fixed the categories with the right range."
+    "Despite, the professors said that the categories contained the right number of pages for each category, we try to prove this step and we saw that the dataset didn't contain the right number of pages per category, so we fixed the categories removing that cateogories without the right pages range."
    ]
   },
   {
@@ -139,7 +136,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "After the first load, read the \"wiki-topcats-page-names.txt\"."
+    "After the first load, we read the \"wiki-topcats-page-names.txt\"."
    ]
   },
   {
@@ -472,7 +469,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "You will notice that one article might belong to a single category or multiple ones. In the case of multiple appearance, you break the ties uniformly at random.\n",
+    "*You will notice that one article might belong to a single category or multiple ones. In the case of multiple appearance, you break the ties uniformly at random.*\n",
     "\n",
     "create a vocabulary in order to create the clean categories without replicates."
    ]
@@ -807,7 +804,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We know that our graph is directed to understand if the graph is sparse or not, we should use this formula:\n",
+    "We know that our graph is **directed** to understand if *the graph is sparse or not*, we should use this formula:\n",
     "\n",
     "$D = \\frac{|E|}{|V|(|V|-1)}$\n",
     "\n",
@@ -1032,7 +1029,7 @@
    "metadata": {},
    "source": [
     "# RQ3\n",
-    "returns the minimum number of clicks required to reach all pages in p, starting from the page v, corresponding to the most central article, according to the in-degree centrality, in C."
+    "*returns the minimum number of clicks required to reach all pages in p, starting from the page v, corresponding to the most central article, according to the in-degree centrality, in C.*"
    ]
   },
   {
@@ -1117,7 +1114,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In order to perform the nearest neighbor, we should have the directed node. In this case we re-calculate the weight of the edges as the min path between each node with its edges connected to other nodes. To execute this first we should calculate the bfs for all node."
+    "In order to perform the nearest neighbor, we should have the directed node. In this case we re-calculate the weight of the edges as the min path between each node with its edges connected to other nodes. To execute, this, first we should calculate the bfs for all node."
    ]
   },
   {
@@ -1158,7 +1155,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now, we have our new directed graph and now it is possible to calculate the shortest path through one node (the source node) to all pages following the natural professors permission.\n",
+    "Now, we have our new directed graph and now it is possible to calculate the shortest path through one node (the source node) to all pages given the professors rule.\n",
     "\n",
     "For this step we prefer using the nearest neighbors in order to find the minimum number of clicks into the graph. \n",
     "\n",
@@ -1207,7 +1204,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "First we choose our two categories"
+    "Given in input two categories: C1 and C2, we get the subgraph induced by all the articles in the two categories.\n",
+    "\n",
+    "First we choose our two categories:"
    ]
   },
   {
@@ -1260,6 +1259,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Let v and u two arbitrary pages in the subgraph. What is the minimum set of hyperlinks one can remove to disconnect u and v?\n",
+    "\n",
     "Here we choose two random nodes in our subgraph and implement our min cut function to see how many edges we have to disconnect."
    ]
   },
@@ -1281,6 +1282,13 @@
    ],
    "source": [
     "fun.random_nodes_implement(subg)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This result is what we expected because the graph initially is considered as sparse, so the probability to obtain the result as zero is high. Many nodes are disconnected."
    ]
   },
   {
@@ -1912,7 +1920,6 @@
    },
    "outputs": [],
    "source": [
-    "import networkx as nx\n",
     "sources= list(newedge['source'])\n",
     "dests = list(newedge['dest'])\n",
     "newG = nx.Graph()\n",
@@ -2029,7 +2036,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Construct a dataframe for each category and its pagerank value."
+    "Construct a dataframe for each category and its pagerank value, all is considered sorted by pagerank value of each category."
    ]
   },
   {
@@ -2044,7 +2051,6 @@
    "outputs": [],
    "source": [
     "nodes = list(newG.nodes)\n",
-    "from tkinter import _flatten\n",
     "Catlist = list(_flatten(PG.tolist()))\n",
     "sortCat ={\"category\":nodes,\"pagerank\":Catlist}"
    ]
@@ -2448,15 +2454,8 @@
    "source": [
     "df.plot(kind='bar',colormap='gist_rainbow',title=\"pagerank\")\n",
     "plt.xticks(range(len(nodes)),nodes)\n",
-    "plt.show()\n"
+    "plt.show()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
